[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.13.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
ureq = "2.0"
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.42.0"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }

[package.metadata.lambda]
artifact_executable_name = "bootstrap"
