[package]
name = "update_node_rankings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
lambda_runtime = "0.13.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.0"
tokio = { version = "1", features = ["full"] }
